; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_Storage_Construct.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_Storage_Construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { %struct.TYPE_8__ }

@STGM_TRANSACTED = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*, i32, i32, i32, i32, %struct.TYPE_8__**)* @Storage_Construct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Storage_Construct(i32 %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6, %struct.TYPE_8__** %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_8__**, align 8
  %17 = alloca %struct.TYPE_7__*, align 8
  %18 = alloca %struct.TYPE_8__*, align 8
  %19 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store %struct.TYPE_8__** %7, %struct.TYPE_8__*** %16, align 8
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load i32*, i32** %11, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %15, align 4
  %27 = call i32 @StorageImpl_Construct(i32 %20, i32 %21, i32* %22, i32 %23, i32 %24, i32 %25, i32 %26, %struct.TYPE_7__** %17)
  store i32 %27, i32* %19, align 4
  %28 = load i32, i32* %19, align 4
  %29 = call i64 @FAILED(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %8
  br label %59

32:                                               ; preds = %8
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* @STGM_TRANSACTED, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %54

37:                                               ; preds = %32
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %38, i32 0, i32 0
  %40 = load i32, i32* @TRUE, align 4
  %41 = call i32 @Storage_ConstructTransacted(%struct.TYPE_8__* %39, i32 %40, %struct.TYPE_8__** %18)
  store i32 %41, i32* %19, align 4
  %42 = load i32, i32* %19, align 4
  %43 = call i64 @FAILED(i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %50

45:                                               ; preds = %37
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %47, i32 0, i32 0
  %49 = call i32 @IStorage_Release(i32* %48)
  br label %53

50:                                               ; preds = %37
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %18, align 8
  %52 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %16, align 8
  store %struct.TYPE_8__* %51, %struct.TYPE_8__** %52, align 8
  br label %53

53:                                               ; preds = %50, %45
  br label %58

54:                                               ; preds = %32
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %16, align 8
  store %struct.TYPE_8__* %56, %struct.TYPE_8__** %57, align 8
  br label %58

58:                                               ; preds = %54, %53
  br label %59

59:                                               ; preds = %58, %31
  %60 = load i32, i32* %19, align 4
  ret i32 %60
}

declare dso_local i32 @StorageImpl_Construct(i32, i32, i32*, i32, i32, i32, i32, %struct.TYPE_7__**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @Storage_ConstructTransacted(%struct.TYPE_8__*, i32, %struct.TYPE_8__**) #1

declare dso_local i32 @IStorage_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
